# menhera-link-rs

./: Cargo.toml  README.md  generate-shared-secret.sh  menhera-link-create.sh  menhera-link-delete.sh
src/: lib.rs
