[package]
name = "menhera-link"
version = "0.1.0"
edition = "2021"
description = "Simple encrypted site-to-site VPN"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
clap = { version = "4", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tun = "0.11"
aes-gcm = { version = "0.10", features = ["std"] }
rand = "0.8"
env_logger = "0.9"
